[bugfix] 백앤드 - kb-document 지식 문서 관리 생성 및 수정 로직 내 참조 오류 및 검증 결함 수정